# Starlink-FI

./: README.md
pcb/: README.md  ibom.html  interposer_footprint.kicad_mod  interposer_symbol.kicad_sym
src/: README.md
src/modchipfw/: CMakeLists.txt  pulsegen.pio  utglitcher.c
src/python/: example.py  pulsegen.py
